# toy-interpreter

./: Cargo.toml  Makefile  README.md  global.css  index.html  manifest.json  service-worker-index.html  service-worker.js
.github/workflows/: deploy.yml  test.yml
client/32155446be5e41fb618a/: index.0.js  main.js
client/bc8060ac4d6ccd7aec8f/: 2.2.js  index.0.js  main.js
client/d9a0dc7b49aacf6d8cb9/: index.0.js  main.js
client/ec6ccf6b56e243cfbc39/: index.0.js  main.js
frontend/: .prettierrc.json  jest-puppeteer.config.js  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
frontend/e2e/: commandline.test.ts
frontend/src/: server.js  service-worker.js  template.html
frontend/static/: global.css  manifest.json  water.css
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs
interpreter/src/interpreter/: mod.rs
interpreter/src/parser/: mod.rs
interpreter/src/parser/expressions/: function.rs  literal.rs  parenthesis.rs
interpreter/src/parser/statements/: mod.rs
interpreter/src/parser/tests/: statement.rs
interpreter/src/runtime/tests/: mod.rs
interpreter/src/tokenizer/: mod.rs
interpreter/src/tokenizer/common/: mod.rs
interpreter/src/tokenizer/tests/: mod.rs
interpreter/src/visitor/: mod.rs
src/: lib.rs  main.rs
src/ast/: mod.rs
src/interpreter/: mod.rs
src/io/: mod.rs
src/parser/: combined_parser.rs  expression.rs  mod.rs  number_parser.rs  operator_parser.rs  statement.rs
src/runtime/: mod.rs
src/tokenizer/: combined_tokenizer.rs  mod.rs
src/utils/: mod.rs
(+43 files in other folders)
