[package]
name = "toy-interpreter"
version = "0.1.0"
authors = ["Grzegorz Kazana <kazana.grzegorz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "toyinterpreter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "toyinterpreter"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.60"

[profile.release]
lto = true
opt-level = 'z'
